syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{
    string account_number  = 1;
    double accrued_interest  = 2;
    string deposit_type  = 3;
    int64 maturity_date  = 4;
    double rat_acct_int  = 5;
    double rat_acct_int_var  = 6;
    int64 next_compound_date  = 7;
    int64 next_payment_date  = 8;
    int64 account_start_date  = 9;
    int64 currency_code  = 10;
    int64 customer_id  = 11;
    double original_balance  = 12;
    int64 origination_date  = 13;
    int64 previous_roll_over_date  = 14;
    string description  = 15;
    string client_name  = 16;
    string tname  = 17;
    string as_on_date  = 18;
    string bank_num  = 19;
    string branch  = 20;
    string rate_flag  = 21;
    string cost_centre_ftp  = 22;
    int64 int_pay_freq  = 23;
    string institution  = 24;
    string new_gl  = 25;
    double int_rate  = 26;
    string concat  = 27;
    string ia_llg  = 28;
    string balm_llg  = 29;
    double current_book_balance  = 30;
    string cost_center  = 31;
    int64 comp_freq  = 32;
    string fin_cost_ftp  = 33;
    string cust_category  = 34;
    string cod_prod  = 35;
    string com_mis_comp_1  = 36;
    string rat_prod_var  = 37;
    int64 dat_value_date  = 38;
    string alm_concat  = 39;
    double amt_initl_dep  = 40;
    double bal_principle_lcy  = 41;
    double bal_int_accr_lcy  = 42;
    string lien_marked  = 43;
    string prod_code  = 44;
    int64 acc_open_date  = 45;
    string gl_int_comp = 46;
    string division = 47;
    string lcr_class_code = 48;
    string contr_mat = 49;
    string res_mat = 50;
    double bal_int_comp_lcy = 51;
    double total_principal_amount = 52;
    double total_interest_amount = 53;
    repeated Cashflow cashflows=54;
}
