syntax = "proto3";

message Cashflow {
    double int_amt = 1;
    double prin_amt = 2;
    int64 date = 3;
}

message AccountWithCashflows {
    string fc_ubs_acc = 1;
    string cust_name = 2;
    double pout_bal = 3;
    double acc_int = 4;
    int64 st_dt = 5;
    int64 c_dt = 6;
    string gl_cd = 7;
    double int_rt = 8;
    string int_typ = 9;
    string int_bmark = 10;
    string rt_flag = 11;
    string prod_cd = 12;
    int64 nxt_pay_dt = 13;
    int64 mis1 = 14;
    int64 mis2 = 15;
    int64 mis3 = 16;
    string ccy = 17;
    string ratings = 18;
    string rating_agency = 19;
    string asset_class = 20;
    string div = 21;
    string typ = 22;
    string originator = 23;
    int64 as_on_dt = 24;
    string rep_freq = 25;
    int64 nxt_rep_dt = 26;
    string portfolio = 27;
    string alm_line = 28;
    int64 txn_mis2 = 29;
    string old_fc_ubs_acc = 30;
    string deal_name = 31;
    int64 cf_start_date = 32;
    int64 org_tenor = 33;
    int64 resid_tenor = 34;
    double total_interest_amount = 35;
    double total_principal_amount = 36;
    string ubs_acct_number = 37;
    string sma_flag = 38;
    repeated Cashflow cashflows= 39;
}
    
